handled all the warnings